--- a/examples/peytonGraphModel/Graph model conversion.ipynb
+++ b/examples/peytonGraphModel/Graph model conversion.ipynb
@@ -195,6 +195,33 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (models.py, line 118)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"/Users/avantishrikumar/Research/deeplift/deeplift/models.py\"\u001b[0;36m, line \u001b[0;32m118\u001b[0m\n\u001b[0;31m    return self._name_to_blob = name_to_blob\u001b[0m\n\u001b[0m                              ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": [
+    "import keras_conversion as kc\n",
+    "import models\n",
+    "reload(models)\n",
+    "reload(kc)\n",
+    "import blobs\n",
+    "reload(blobs)\n",
+    "from blobs import MxtsMode\n",
+    "deeplift_model = kc.convert_graph_model(keras_model, mxts_mode=MxtsMode.DeepLIFT)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
