--- a/examples/peytonGraphModel/Graph model conversion.ipynb
+++ b/examples/peytonGraphModel/Graph model conversion.ipynb
@@ -275,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 37,
    "metadata": {
     "collapsed": false,
     "scrolled": false
@@ -294,81 +294,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[<blobs.Dense at 0x16f4c52d0>,\n",
-       " <blobs.Dense at 0x16f4c5210>,\n",
-       " <blobs.Dense at 0x16f4c5350>,\n",
-       " <blobs.Dense at 0x16f4d4850>,\n",
-       " <blobs.Dense at 0x16f4b3fd0>,\n",
-       " <blobs.Dense at 0x16f4d4ed0>,\n",
-       " <blobs.Dense at 0x16f4d4d10>,\n",
-       " <blobs.Dense at 0x16f4c5290>,\n",
-       " <blobs.Dense at 0x16f4d4f90>,\n",
-       " <blobs.Dense at 0x16f4d4fd0>,\n",
-       " <blobs.Dense at 0x167a9c490>,\n",
-       " <blobs.Dense at 0x16f4d4d50>,\n",
-       " <blobs.Dense at 0x16f4d4e10>,\n",
-       " <blobs.Dense at 0x16f4d46d0>,\n",
-       " <blobs.Dense at 0x16f4d4590>,\n",
-       " <blobs.Dense at 0x16f4d4650>,\n",
-       " <blobs.Dense at 0x16f4d4610>,\n",
-       " <blobs.Dense at 0x16f4d49d0>,\n",
-       " <blobs.Dense at 0x16f4d4510>,\n",
-       " <blobs.Dense at 0x16f4b3f90>,\n",
-       " <blobs.Dense at 0x167a9ca50>,\n",
-       " <blobs.Dense at 0x16f4d4950>,\n",
-       " <blobs.Dense at 0x16f4d4890>,\n",
-       " <blobs.Dense at 0x16f4d4790>,\n",
-       " <blobs.Dense at 0x16f4d4cd0>,\n",
-       " <blobs.Dense at 0x16f4d4ad0>,\n",
-       " <blobs.Dense at 0x16f4d4c50>,\n",
-       " <blobs.Dense at 0x16f4d4c10>,\n",
-       " <blobs.Dense at 0x16f4d4b50>,\n",
-       " <blobs.Dense at 0x16f4c5110>,\n",
-       " <blobs.Dense at 0x16f4d4bd0>,\n",
-       " <blobs.Dense at 0x16f4d4150>,\n",
-       " <blobs.Dense at 0x16f4d4450>,\n",
-       " <blobs.Dense at 0x16f4d43d0>,\n",
-       " <blobs.Dense at 0x16f4d4110>,\n",
-       " <blobs.Dense at 0x16f4d4190>,\n",
-       " <blobs.Dense at 0x16eca9cd0>,\n",
-       " <blobs.Dense at 0x16f4c5590>,\n",
-       " <blobs.Dense at 0x16ed003d0>,\n",
-       " <blobs.Dense at 0x167a9c2d0>,\n",
-       " <blobs.Dense at 0x167a9c1d0>,\n",
-       " <blobs.Dense at 0x167a9c390>,\n",
-       " <blobs.Dense at 0x167a9c610>,\n",
-       " <blobs.Dense at 0x16f4d4f50>,\n",
-       " <blobs.Dense at 0x16ed00250>,\n",
-       " <blobs.Dense at 0x167a9c690>,\n",
-       " <blobs.Dense at 0x167a9c590>,\n",
-       " <blobs.Dense at 0x167a9c550>,\n",
-       " <blobs.Dense at 0x167a9c510>,\n",
-       " <blobs.Dense at 0x167a9cc10>,\n",
-       " <blobs.Dense at 0x167a9cbd0>,\n",
-       " <blobs.Dense at 0x167a9cb50>,\n",
-       " <blobs.Dense at 0x167a9c350>,\n",
-       " <blobs.Dense at 0x167a9cc90>]"
-      ]
-     },
-     "execution_count": 31,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "deeplift_model.get_name_to_blob()['activ4']._output_layers"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 8,
    "metadata": {
     "collapsed": false
@@ -381,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -393,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -411,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -427,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -444,24 +369,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "for single seq 1.49012e-07\n",
-      "across all seq 2.26498e-06\n",
-      "for single seq 1.63913e-07\n",
-      "across all seq 2.68966e-06\n",
-      "for single seq 0.0\n",
-      "across all seq 0.0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#verify that they differ by tiny amounts\n",
     "for keras_result, deeplift_result in zip(keras_results, deeplift_results):\n",
@@ -471,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 41,
    "metadata": {
     "collapsed": true
    },
@@ -479,12 +391,12 @@
    "source": [
     "#make sure multiplier computation and stuff works\n",
     "output_layer_name = 'softmax_for_col_HSCvBcell_dense'\n",
-    "input_layer_name = 'activ4'"
+    "input_layer_name = 'input'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 42,
    "metadata": {
     "collapsed": false
    },
@@ -500,7 +412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 43,
    "metadata": {
     "collapsed": false
    },
@@ -513,7 +425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 44,
    "metadata": {
     "collapsed": false
    },
@@ -532,7 +444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 45,
    "metadata": {
     "collapsed": true
    },
@@ -544,7 +456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 46,
    "metadata": {
     "collapsed": false
    },
@@ -552,10 +464,10 @@
     {
      "data": {
       "text/plain": [
-       "0.0"
+       "0.00014297609"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
