--- a/examples/peytonGraphModel/Graph model conversion.ipynb
+++ b/examples/peytonGraphModel/Graph model conversion.ipynb
@@ -275,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 39,
    "metadata": {
     "collapsed": false,
     "scrolled": false
@@ -294,19 +294,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 53,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
     "#let's forward prop a bunch of random sequences through it\n",
-    "random_sequences = np.random.uniform(size=(10,1,4,1000))"
+    "random_sequences = np.random.uniform(size=(2000,1,4,1000))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 58,
    "metadata": {
     "collapsed": true
    },
@@ -318,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 59,
    "metadata": {
     "collapsed": false
    },
@@ -336,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 60,
    "metadata": {
     "collapsed": false
    },
@@ -352,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 61,
    "metadata": {
     "collapsed": false
    },
@@ -369,39 +369,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 63,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3.57628e-07\n",
+      "5.36442e-07\n",
+      "0.0\n"
+     ]
+    }
+   ],
    "source": [
     "#verify that they differ by tiny amounts\n",
+    "#You expect a slight difference in the softmax caused by the normalization\n",
     "for keras_result, deeplift_result in zip(keras_results, deeplift_results):\n",
-    "    print(\"for single seq\",np.sum(np.abs(np.array(keras_result[0])-np.array(deeplift_result[0]))))\n",
-    "    print(\"across all seq\",np.sum(np.abs(np.array(keras_result)-np.array(deeplift_result))))"
+    "    print(np.max(np.abs(np.array(keras_result)-np.array(deeplift_result))))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 47,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "#make sure multiplier computation and stuff works\n",
+    "#make sure multiplier computation and stuff works; will check this by checking that gradient computation works\n",
     "output_layer_name = 'softmax_for_col_HSCvBcell_dense'\n",
     "input_layer_name = 'input'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 48,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
+    "#function that computes the gradients with T.grad\n",
     "direct_gradient_function = theano.function(\n",
     "                            [deeplift_model.get_name_to_blob()['input'].get_activation_vars()],\n",
     "                            theano.tensor.grad(\n",
@@ -412,12 +423,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 49,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
+    "#function that computes the gradients analogously to how I compute deeplift scores (remember MxtsMode was set to Gradient)\n",
     "multipliers_func = deeplift_model.get_target_multipliers_func(\n",
     "                 find_scores_layer_name=input_layer_name,\n",
     "                 pre_activation_target_layer_name=output_layer_name)"
@@ -425,7 +437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 54,
    "metadata": {
     "collapsed": false
    },
@@ -434,29 +446,57 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Done 0\n"
+      "Done 0\n",
+      "Done 200\n",
+      "Done 400\n",
+      "Done 600\n",
+      "Done 800\n",
+      "Done 1000\n",
+      "Done 1200\n",
+      "Done 1400\n",
+      "Done 1600\n",
+      "Done 1800\n"
      ]
     }
    ],
    "source": [
+    "#run the multipliers function\n",
     "multipliers = multipliers_func(task_idx=2, input_data_list=[random_sequences], batch_size=10, progress_update=200)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 56,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Done 0\n",
+      "Done 200\n",
+      "Done 400\n",
+      "Done 600\n",
+      "Done 800\n",
+      "Done 1000\n",
+      "Done 1200\n",
+      "Done 1400\n",
+      "Done 1600\n",
+      "Done 1800\n"
+     ]
+    }
+   ],
    "source": [
+    "#run the theano function that uses T.grad\n",
     "gradients_direct = deeplift_util.run_function_in_batches(direct_gradient_function,\n",
-    "                                                         input_data_list=[random_sequences], batch_size=1, progress_update=None)"
+    "                                                         input_data_list=[random_sequences], batch_size=10, progress_update=200)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 57,
    "metadata": {
     "collapsed": false
    },
@@ -464,16 +504,17 @@
     {
      "data": {
       "text/plain": [
-       "0.00014297609"
+       "1.4901161e-07"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "np.sum(np.abs(np.array(multipliers)-np.array(gradients_direct)))"
+    "#compare results\n",
+    "np.max(np.abs(np.array(multipliers)-np.array(gradients_direct)))"
    ]
   },
   {
