--- a/examples/peytonGraphModel/Graph model conversion.ipynb
+++ b/examples/peytonGraphModel/Graph model conversion.ipynb
@@ -11,9 +11,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Using gpu device 0: GeForce GT 750M (CNMeM is disabled, CuDNN not available)\n",
-      "/Users/avantishrikumar/anaconda/lib/python2.7/site-packages/theano/tensor/signal/downsample.py:5: UserWarning: downsample module has been moved to the pool module.\n",
-      "  warnings.warn(\"downsample module has been moved to the pool module.\")\n"
+      "Using gpu device 4: GeForce GTX TITAN X (CNMeM is disabled, cuDNN 5004)\n"
      ]
     }
    ],
@@ -55,7 +53,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Using Theano backend.\n"
+      "Using Theano backend.\n",
+      "/users/avanti/anaconda2/lib/python2.7/site-packages/theano/tensor/signal/downsample.py:6: UserWarning: downsample module has been moved to the theano.tensor.signal.pool module.\n",
+      "  \"downsample module has been moved to the theano.tensor.signal.pool module.\")\n"
      ]
     }
    ],
@@ -275,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 27,
    "metadata": {
     "collapsed": false,
     "scrolled": false
@@ -294,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 28,
    "metadata": {
     "collapsed": false
    },
@@ -306,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 29,
    "metadata": {
     "collapsed": true
    },
@@ -318,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 30,
    "metadata": {
     "collapsed": false
    },
@@ -336,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -352,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -369,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -378,8 +378,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3.57628e-07\n",
-      "5.36442e-07\n",
+      "4.17233e-07\n",
+      "5.96046e-07\n",
       "0.0\n"
      ]
     }
@@ -393,20 +393,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 19,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "#make sure multiplier computation and stuff works; will check this by checking that gradient computation works\n",
-    "output_layer_name = 'softmax_for_col_HSCvBcell_dense'\n",
+    "output_layer_name = 'softmax_for_col_HSCvErythroid_dense' #'softmax_for_col_HSCvBcell_dense'\n",
     "input_layer_name = 'input'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 20,
    "metadata": {
     "collapsed": false
    },
@@ -423,7 +423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 21,
    "metadata": {
     "collapsed": false
    },
@@ -437,7 +437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 22,
    "metadata": {
     "collapsed": false
    },
@@ -466,7 +466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 23,
    "metadata": {
     "collapsed": false
    },
@@ -496,7 +496,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 24,
    "metadata": {
     "collapsed": false
    },
@@ -504,10 +504,10 @@
     {
      "data": {
       "text/plain": [
-       "1.4901161e-07"
+       "0.14543766"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
