importance score calculation is happening
Former-commit-id: 880aeec962e34d306a82d6fe303c94f26ef751cb [formerly 981148010a2566110f613177c0f391877b4201cc]
Former-commit-id: bcd5a82306b095afd02d4309371ad27bc2720a89

--- a/examples/rnn/ctcf_gru/GRU test.ipynb
+++ b/examples/rnn/ctcf_gru/GRU test.ipynb
@@ -92,6 +92,28 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 149,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(100, 2)"
+      ]
+     },
+     "execution_count": 149,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "keras_model.layers[3].get_weights()[0].shape"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 11,
    "metadata": {
     "collapsed": false
@@ -206,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 157,
    "metadata": {
     "collapsed": false
    },
@@ -218,10 +240,10 @@
     "reload(deeplift.blobs)\n",
     "reload(deeplift.backend)\n",
     "#(haven't implemented reshape and permute yet but I want to get right to it)\n",
-    "deeplift_layers = [\n",
-    "    deeplift.blobs.Input_FixedDefault(default=0.25, num_dims=3, shape=(150,4), name=\"input\")]+\\\n",
+    "deeplift_layers = [deeplift.blobs.Input_FixedDefault(default=0.25, num_dims=3, shape=(150,4), name=\"input\")]+\\\n",
     "    kc.gru_conversion(keras_model.layers[2], name=str(\"layer0\"))+\\\n",
-    "    kc.dense_conversion(keras_model.layers[3], name=str(\"layer1\"), mxts_mode=deeplift.blobs.MxtsMode.DeepLIFT, expo_upweight_factor=0)\n",
+    "    kc.dense_conversion(keras_model.layers[3], name=str(\"layer1\"), mxts_mode=deeplift.blobs.MxtsMode.DeepLIFT, expo_upweight_factor=0)+\\\n",
+    "    kc.activation_conversion(keras_model.layers[4], name=str(\"layer2\"), mxts_mode=deeplift.blobs.MxtsMode.DeepLIFT, expo_upweight_factor=0)\n",
     "\n",
     "deeplift.util.connect_list_of_layers(deeplift_layers)\n",
     "deeplift_layers[-1]._build_fwd_pass_vars()\n",
@@ -230,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 158,
    "metadata": {
     "collapsed": false
    },
@@ -239,6 +261,85 @@
     "deeplift_output_func = theano.function([deeplift_model.get_layers()[0].get_activation_vars()],\n",
     "                                        deeplift_model.get_layers()[-1].get_activation_vars(),\n",
     "                                        allow_input_downcast=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 159,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "deeplift_test_preds = deeplift_output_func(np.transpose(np.squeeze(testData.X), axes=(0,2,1)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 160,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.97960000000000003"
+      ]
+     },
+     "execution_count": 160,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.metrics import roc_auc_score\n",
+    "roc_auc_score(y_true=testData.Y[:,0], y_score=deeplift_test_preds[:,0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 161,
+   "metadata": {
+    "collapsed": false,
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "contribs_func = deeplift_model.get_target_contribs_func(find_scores_layer_idx=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 162,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hi\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"hi\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 163,
+   "metadata": {
+    "collapsed": false,
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "imp_scores = contribs_func(task_idx=0,\n",
+    "                           input_data_list=[np.transpose(np.squeeze(testData.X), axes=(0,2,1))],\n",
+    "                           batch_size=10, progress_update=None)"
    ]
   },
   {
