--- a/examples/relu_overestimation/DeepLIFT.ipynb
+++ b/examples/relu_overestimation/DeepLIFT.ipynb
@@ -9,11 +9,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Using Theano backend.\n",
+      "Using gpu device 0: GeForce GT 750M (CNMeM is disabled, cuDNN not available)\n",
+      "/Users/avantishrikumar/anaconda/lib/python2.7/site-packages/theano/tensor/signal/downsample.py:6: UserWarning: downsample module has been moved to the theano.tensor.signal.pool module.\n",
+      "  \"downsample module has been moved to the theano.tensor.signal.pool module.\")\n"
+     ]
+    }
+   ],
    "source": [
     "%matplotlib inline\n",
     "from __future__ import division;\n",
@@ -48,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -71,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false,
     "scrolled": false
@@ -107,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -125,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -136,7 +147,7 @@
        "<module 'deeplift.conversion.keras_conversion' from '/Users/avantishrikumar/Research/deeplift/deeplift/conversion/keras_conversion.pyc'>"
       ]
      },
-     "execution_count": 121,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -148,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false,
     "scrolled": false
@@ -171,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -183,6 +194,9 @@
     "guided_backprop_model = kc.convert_sequential_model(keras_model, mxts_mode=MxtsMode.GuidedBackprop)\n",
     "guided_backprop_times_inp_func = guided_backprop_model.get_target_contribs_func(find_scores_layer_idx=0, target_layer_idx=-1)\n",
     "guided_backprop_func = guided_backprop_model.get_target_multipliers_func(find_scores_layer_idx=0, target_layer_idx=-1)\n",
+    "guided_backprop_deeplift_model = kc.convert_sequential_model(keras_model, mxts_mode=MxtsMode.GuidedBackpropDeepLIFT)\n",
+    "guided_backprop_deeplift_times_inp_func = guided_backprop_deeplift_model.get_target_contribs_func(find_scores_layer_idx=0, target_layer_idx=-1)\n",
+    "guided_backprop_deeplift_func = guided_backprop_deeplift_model.get_target_multipliers_func(find_scores_layer_idx=0, target_layer_idx=-1)\n",
     "deconv_model = kc.convert_sequential_model(keras_model, mxts_mode=MxtsMode.DeconvNet)\n",
     "deconv_func = deconv_model.get_target_multipliers_func(find_scores_layer_idx=0, target_layer_idx=-1)\n",
     "deconv_times_inp_func = deconv_model.get_target_contribs_func(find_scores_layer_idx=0, target_layer_idx=-1)"
@@ -190,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -204,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -215,7 +229,7 @@
        "array([[ 0.32562831]], dtype=float32)"
       ]
      },
-     "execution_count": 125,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -226,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -244,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false,
     "scrolled": false
@@ -257,21 +271,25 @@
     "grad,\\\n",
     "guided_backprop_times_inp,\\\n",
     "guided_backprop,\\\n",
+    "guided_backprop_deeplift_times_inp,\\\n",
+    "guided_backprop_deeplift,\\\n",
     "deconv_times_inp,\\\n",
     "deconv = [np.array(contribs_func(task_idx=0, input_data_list=[data.X], batch_size=1000, progress_update=None))\n",
     "                    for contribs_func in [deeplift_contribs_func,\n",
     "                                          deeplift_multipliers_func,\n",
-    "                                          grad_func,\n",
     "                                          grad_times_inp_func,\n",
+    "                                          grad_func,\n",
     "                                          guided_backprop_times_inp_func,\n",
     "                                          guided_backprop_func,\n",
+    "                                          guided_backprop_deeplift_times_inp_func,\n",
+    "                                          guided_backprop_deeplift_func,\n",
     "                                          deconv_times_inp_func,\n",
     "                                          deconv_func]]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
@@ -282,10 +300,12 @@
      "text": [
       "True positives:  (20000,) 20000\n",
       "deeplift 0.00147205033174\n",
-      "grad_times_inp 0.259726147902\n",
-      "grad 0.0798918614418\n",
+      "grad_times_inp 0.0798918614418\n",
+      "grad 0.259726147902\n",
       "guided_backprop_times_inp 0.0872208890279\n",
       "guided_backprop 0.229953927246\n",
+      "guided_backprop_deeplift_times_inp 0.0294025763542\n",
+      "guided_backprop_deeplift 0.067845977141\n",
       "deconv_times_inp 0.151141441722\n",
       "deconv 0.500190961702\n"
      ]
@@ -302,6 +322,8 @@
     "                            ('grad', grad),\n",
     "                            ('guided_backprop_times_inp', guided_backprop_times_inp),\n",
     "                            ('guided_backprop', guided_backprop),\n",
+    "                            ('guided_backprop_deeplift_times_inp', guided_backprop_deeplift_times_inp),\n",
+    "                            ('guided_backprop_deeplift', guided_backprop_deeplift),\n",
     "                            ('deconv_times_inp', deconv_times_inp),\n",
     "                            ('deconv', deconv)]:\n",
     "    scores = scores\n",
@@ -313,24 +335,6 @@
     "    mse = np.mean(np.square(true_scores_on_true_positives-scores_on_true_positives))\n",
     "    print(scores_name, mse)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
