--- a/examples/saturation/1d_input/DeepLIFT_100Kruns.ipynb
+++ b/examples/saturation/1d_input/DeepLIFT_100Kruns.ipynb
@@ -180,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 24,
    "metadata": {
     "collapsed": false
    },
@@ -192,6 +192,9 @@
     "guided_backprop_model = kc.convert_sequential_model(keras_model, mxts_mode=MxtsMode.GuidedBackprop)\n",
     "guided_backprop_times_inp_func = guided_backprop_model.get_target_contribs_func(find_scores_layer_idx=0)\n",
     "guided_backprop_func = guided_backprop_model.get_target_multipliers_func(find_scores_layer_idx=0)\n",
+    "guided_backprop_deeplift_model = kc.convert_sequential_model(keras_model, mxts_mode=MxtsMode.GuidedBackpropDeepLIFT)\n",
+    "guided_backprop_deeplift_times_inp_func = guided_backprop_deeplift_model.get_target_contribs_func(find_scores_layer_idx=0)\n",
+    "guided_backprop_deeplift_func = guided_backprop_deeplift_model.get_target_multipliers_func(find_scores_layer_idx=0)\n",
     "deconv_model = kc.convert_sequential_model(keras_model, mxts_mode=MxtsMode.DeconvNet)\n",
     "deconv_func = deconv_model.get_target_multipliers_func(find_scores_layer_idx=0)\n",
     "deconv_times_inp_func = deconv_model.get_target_contribs_func(find_scores_layer_idx=0)"
@@ -199,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 25,
    "metadata": {
     "collapsed": false
    },
@@ -213,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 26,
    "metadata": {
     "collapsed": false
    },
@@ -232,7 +235,7 @@
        "         0.0079971 ,  0.00846429,  0.0073612 ,  0.00946271,  0.00914535]], dtype=float32)"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -243,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 27,
    "metadata": {
     "collapsed": false
    },
@@ -254,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 28,
    "metadata": {
     "collapsed": false,
     "scrolled": false
@@ -320,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 29,
    "metadata": {
     "collapsed": false
    },
@@ -387,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 32,
    "metadata": {
     "collapsed": false,
     "scrolled": false
@@ -400,22 +403,26 @@
     "grad,\\\n",
     "guided_backprop_times_inp,\\\n",
     "guided_backprop,\\\n",
+    "guided_backprop_deeplift_times_inp,\\\n",
+    "guided_backprop_deeplift,\\\n",
     "deconv_times_inp,\\\n",
     "deconv = [[np.array(contribs_func(task_idx=i, input_data_list=[data.X], batch_size=1000, progress_update=None))\n",
     "                    for i in range(data.Y.shape[-1])]\n",
     "                    for contribs_func in [deeplift_contribs_func,\n",
     "                                          deeplift_multipliers_func,\n",
-    "                                          grad_func,\n",
     "                                          grad_times_inp_func,\n",
+    "                                          grad_func,\n",
     "                                          guided_backprop_times_inp_func,\n",
     "                                          guided_backprop_func,\n",
+    "                                          guided_backprop_deeplift_times_inp_func,\n",
+    "                                          guided_backprop_deeplift_func,\n",
     "                                          deconv_times_inp_func,\n",
     "                                          deconv_func]]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 33,
    "metadata": {
     "collapsed": false
    },
@@ -425,12 +432,14 @@
      "output_type": "stream",
      "text": [
       "deeplift 0.9781520116\n",
-      "grad_times_inp 0.818327054289\n",
-      "grad 0.818024661514\n",
+      "grad_times_inp 0.8175276112\n",
+      "grad 0.298641559752\n",
       "guided_backprop_times_inp 0.143816033779\n",
-      "guided_backprop 0.142047338736\n",
+      "guided_backprop 0.0698287201052\n",
+      "guided_backprop_deeplift_times_inp 0.144306206722\n",
+      "guided_backprop_deeplift 0.0699108552511\n",
       "deconv_times_inp 0.091537127847\n",
-      "deconv 0.0898948440557\n"
+      "deconv 0.0443167054198\n"
      ]
     }
    ],
@@ -441,6 +450,8 @@
     "                            ('grad', grad),\n",
     "                            ('guided_backprop_times_inp', guided_backprop_times_inp),\n",
     "                            ('guided_backprop', guided_backprop),\n",
+    "                            ('guided_backprop_deeplift_times_inp', guided_backprop_deeplift_times_inp),\n",
+    "                            ('guided_backprop_deeplift', guided_backprop_deeplift),\n",
     "                            ('deconv_times_inp', deconv_times_inp),\n",
     "                            ('deconv', deconv)]:\n",
     "    num_caps = 10\n",
@@ -453,11 +464,24 @@
     "            relevant_inputs_cap1 = slice(cap1*inputs_per_cap,(cap1+1)*inputs_per_cap)\n",
     "            relevant_inputs_cap2 = slice(cap2*inputs_per_cap,(cap2+1)*inputs_per_cap)\n",
     "            true_positives_mask = true_positives[:,task_idx]\n",
-    "            scores_on_true_positives = np.abs(np.compress(np.nonzero(true_positives_mask)[0],scores[task_idx],axis=0))\n",
-    "            total_scores = np.sum(scores_on_true_positives, axis=1)\n",
-    "            total_scores = 0.0000001*(total_scores == 0) + total_scores\n",
-    "            scores_on_relevant_indices = np.sum(scores_on_true_positives[:,relevant_inputs_cap1], axis=1) +\\\n",
-    "                                         np.sum(scores_on_true_positives[:,relevant_inputs_cap2], axis=1)\n",
+    "            \n",
+    "            scores_on_true_positives = np.compress(np.nonzero(true_positives_mask)[0],scores[task_idx],axis=0)\n",
+    "            input_data_true_positives = np.compress(np.nonzero(true_positives_mask)[0], data.X, axis=0)\n",
+    "            \n",
+    "            scores_relevant_inputs_cap1 = scores_on_true_positives[:,relevant_inputs_cap1]\n",
+    "            scores_relevant_inputs_cap2 = scores_on_true_positives[:,relevant_inputs_cap2]\n",
+    "            signs_relevant_inputs_cap1 = np.sign(np.compress(np.nonzero(true_positives_mask)[0], data.X[:,relevant_inputs_cap1], axis=0))\n",
+    "            signs_relevant_inputs_cap2 = np.sign(np.compress(np.nonzero(true_positives_mask)[0], data.X[:,relevant_inputs_cap2], axis=0))\n",
+    "            correct_sign_scores_cap1 = np.abs(scores_relevant_inputs_cap1*(np.equal(np.sign(scores_relevant_inputs_cap1),\n",
+    "                                                                                    signs_relevant_inputs_cap1)))\n",
+    "            correct_sign_scores_cap2 = np.abs(scores_relevant_inputs_cap2*(np.equal(np.sign(scores_relevant_inputs_cap2),\n",
+    "                                                                                    signs_relevant_inputs_cap2)))\n",
+    "            \n",
+    "            \n",
+    "            total_scores = np.sum(np.abs(scores_on_true_positives), axis=1)\n",
+    "            scores_on_relevant_indices = np.sum(correct_sign_scores_cap1, axis=1) +\\\n",
+    "                                         np.sum(correct_sign_scores_cap2, axis=1)\n",
+    "            total_scores = 0.0000001*(total_scores == 0) + total_scores #prevent div by zero\n",
     "            proportion_on_correct_indices = scores_on_relevant_indices/total_scores\n",
     "            average_proportion = np.mean(proportion_on_correct_indices)\n",
     "            average_proportion_on_correct_array.append(average_proportion)\n",
