updated the MNIST example notebook for keras 2

--- a/examples/convert_models/keras1.2to2/MNIST.ipynb
+++ b/examples/convert_models/keras1.2to2/MNIST.ipynb
@@ -29,16 +29,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "--2018-06-05 22:05:05--  https://raw.githubusercontent.com/AvantiShri/model_storage/cca175f988023e62b7a2939f151034d38a83c4d3/deeplift/mnist/mnist_cnn_allconv_tensorflow.h5\n",
+      "rm: mnist_cnn_allconv_tensorflow.h5: No such file or directory\n",
+      "--2018-06-05 22:07:45--  https://raw.githubusercontent.com/AvantiShri/model_storage/cca175f988023e62b7a2939f151034d38a83c4d3/deeplift/mnist/mnist_cnn_allconv_tensorflow.h5\n",
       "Resolving raw.githubusercontent.com... 151.101.188.133\n",
       "Connecting to raw.githubusercontent.com|151.101.188.133|:443... connected.\n",
       "HTTP request sent, awaiting response... 200 OK\n",
       "Length: 979776 (957K) [application/octet-stream]\n",
       "Saving to: 'mnist_cnn_allconv_tensorflow.h5'\n",
       "\n",
-      "100%[======================================>] 979,776     6.18MB/s   in 0.2s   \n",
+      "100%[======================================>] 979,776     --.-K/s   in 0.08s   \n",
       "\n",
-      "2018-06-05 22:05:06 (6.18 MB/s) - 'mnist_cnn_allconv_tensorflow.h5' saved [979776/979776]\n",
+      "2018-06-05 22:07:45 (11.1 MB/s) - 'mnist_cnn_allconv_tensorflow.h5' saved [979776/979776]\n",
       "\n"
      ]
     }
